# ProjectEagle

./: .gitignore  CMakeLists.txt  deploy.py  deploy_eagles.py  get_movies.py  readme.md  todo
eagle/: CMakeLists.txt
eagle/cmake/: eagle-config.cmake.in
eagle/config/: config.xml  config.yml  detector.yml  extrinsic.xml
eagle/src/: eagle.h
eagle/src/calibrator/: CMakeLists.txt  board_settings.cpp  board_settings.h  calibration_settings.cpp  calibration_settings.h  calibrator.cpp  calibrator.h  pattern.cpp  pattern.h  pattern_extractor.cpp  pattern_extractor.h  pattern_extractor3.cpp  pattern_extractor3.h  planar_pattern_extractor3.cpp  planar_pattern_extractor3.h  pnp_pattern_extractor3.cpp  pnp_pattern_extractor3.h  projection.cpp  projection.h
eagle/src/camera/: CMakeLists.txt  camera.h  camera.hpp  camera_interface.cpp  camera_interface.h  camera_settings.cpp  camera_settings.h  latitude_camera.cpp  latitude_camera.h  libcam.cpp  libcam.hpp  libcamsettings.hpp  odroid_camera.cpp  odroid_camera.h  opi_camera.cpp  opi_camera.h  pi_camera.cpp  pi_camera.h  readme.md  see3_camera.cpp  see3_camera.h  v4l2_camera.cpp  v4l2_camera.h
eagle/src/communicator/: CMakeLists.txt  com_settings.cpp  com_settings.h  communicator.cpp  communicator.h  libcom.hpp  message.h
eagle/src/configurator/: CMakeLists.txt  config.cpp  config.hpp  libconfig.hpp
eagle/src/detector/: CMakeLists.txt  calibration_pattern.cpp  calibration_pattern.h  chessboard.cpp  chessboard.h  circle_triangle.cpp  circle_triangle.h  collector.cpp  collector.h  detector.cpp  detector.h  fuse.cpp  fuse.h  obstacle.cpp  obstacle.h  obstacle_circle.cpp  obstacle_circle.h  obstacle_rectangle.cpp  obstacle_rectangle.h  pattern.cpp  pattern.h  pattern_extractor.cpp  pattern_extractor.h  pattern_extractor3.cpp  pattern_extractor3.h  pattern_interface.h  planar_pattern_extractor3.cpp  planar_pattern_extractor3.h  pnp_pattern_extractor3.cpp  pnp_pattern_extractor3.h  projection.cpp  projection.h  protocol.h  robot.cpp  robot.h  transform.cpp  transform.h
eagle/src/exec/: CMakeLists.txt  background.cpp  background_cmd.cpp  calibrate.cpp  calibrate_ground.cpp  calibration_cmd.cpp  chessboard_snapper.cpp  debug_mode_cmd.cpp  detection_cmd.cpp  detector_test.cpp  detector_test2.cpp  eagle_transmitter.cpp  fuse.cpp  image_fuser.cpp  image_receiver.cpp  image_stream_cmd.cpp  image_transmitter.cpp  image_transmitter_undistort.cpp  online_image_fuser.cpp  record_cmd.cpp  snapshot.cpp  snapshot_cmd.cpp  stereo_calibrate.cpp  test_communicator.cpp  viewer.cpp
eagle/src/utils/: CMakeLists.txt  config_helper.h  eagle_cmd_helper.h  protocol.h  rapidxml.hpp  rapidxml_print.hpp  transform.h  utils.cpp  utils.h
src/: CMakeLists.txt  camera_interface.cpp  communicator.cpp  detector.cpp  latitude_camera.cpp  obstacle.cpp  opi_camera.cpp  robot.cpp  see3_camera.cpp  streamer.cpp  utils.cpp  v4l2_camera.cpp
src/cal/: board_settings.cpp  cal_settings.cpp  calibration_settings.cpp  calibrator.cpp
src/calibrator/: CMakeLists.txt
src/calibrator/src/: calibrate.cpp  stereo_calibrate.cpp
src/calibrator/src/helpers/: board_settings.h  calibration_settings.cpp  calibration_settings.h  calibrator.cpp  calibrator.h
src/cam/: camera_interface.cpp  camera_settings.cpp  latitude_camera.cpp  libcam.cpp  odroid_camera.cpp  opi_camera.cpp  pi_camera.cpp  see3_camera.cpp  v4l2_camera.cpp
src/client/config/: detector.yml  main.conf
src/client/config/devices/Pi/: cal.xml  cal_conf.xml  conf.xml  images.xml
src/client/config/devices/ceil/: cal.xml  cal_conf.xml  conf.xml  images.xml
src/client/config/devices/eagle0/: calibration.xml  config.xml  extrinsic.xml  extrinsic_conf.xml  extrinsic_snaps.xml  intrinsic_snaps.xml
src/client/config/devices/eagle1/: calibration.xml  config.xml  extrinsic.xml  extrinsic_conf.xml  extrinsic_snaps.xml  intrinsic_conf.xml  intrinsic_snaps.xml
src/client/config/devices/next/: calibration.xml  config.xml  extrinsic.xml  extrinsic_conf.xml  extrinsic_snaps.xml  intrinsic_conf.xml  intrinsic_snaps.xml
src/client/config/devices/origin/: calibration.xml  config.xml  extrinsic.xml  extrinsic_conf.xml  extrinsic_snaps.xml  intrinsic_conf.xml  intrinsic_snaps.xml
src/client/config/devices/other/: calibration.xml  config.xml  extrinsic.xml  extrinsic_conf.xml  extrinsic_snaps.xml  intrinsic_conf.xml  intrinsic_snaps.xml
src/client/spike/: chat.py  comictree.py  ssh_command_line.py
src/client/src/: core.py  test.conf
src/client/src/comm/: communicator.py  ssh_manager.py
src/client/src/config/: cal_config.py  extrinsic_conf.py  path_finder.py
src/client/src/device/: device.py  device_manager.py
src/client/src/widgets/: calibrate_wizard.py  device_tree.py  device_wizard.py  image_stream.py
src/client/src/widgets/calibrate_wizard/: calibrate_wizard.py  file_list_view.py  (+1 more)
src/comm/: comm_settings.cpp  communicator.cpp  streamer.cpp  video_stream.cpp
src/eagle/: CMakeLists.txt
src/eagle/src/: background.cpp  eagle_transmitter.cpp
src/eagle/src/helpers/: detector.cpp  detector.h  obstacle.h  robot.cpp  robot.h
src/image_transmitter/: CMakeLists.txt
src/image_transmitter/src/: image_receiver.cpp  image_transmitter.cpp  image_transmitter_undistort.cpp  snapshot.cpp
src/libcam/: CMakeLists.txt
src/libcam/include/: libcam.hpp  libcamsettings.hpp
src/libcam/src/: camera_settings.cpp  camera_settings.h  libcom.cpp
src/libcam/src/types/: camera_interface.cpp  latitude_camera.cpp  latitude_camera.h  odroid_camera.cpp  odroid_camera.h  opi_camera.cpp  opi_camera.h  pi_camera.cpp  pi_camera.h  see3_camera.h  v4l2_camera.cpp  v4l2_camera.h
src/libcam/test/: test_cam.cpp
src/libcom/: CMakeLists.txt
src/libcom/include/: libcom.hpp
src/libcom/src/: com_settings.cpp  com_settings.h  communicator.cpp  communicator.h  protocol.h
src/libconfig/: CMakeLists.txt
src/libconfig/include/: libconfig.hpp
src/libconfig/src/: config.cpp  config.hpp
src/libio/: CMakeLists.txt
src/libio/include/: libio.hpp
src/libio/src/: utils.cpp
src/viewer/: CMakeLists.txt
src/viewer/src/: viewer.cpp
(+117 files in other folders)
